--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
+    "lodash-es": "^4.17.15",
     "material-icons": "^0.3.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
