--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.5.0",
     "lodash-es": "^4.17.15",
     "material-icons": "^0.3.1",
+    "moment": "^2.24.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
